Enhance case sheet template prioritization, enable template switching, and implement multi-tenant database migrations for branch management.